--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
+  "compilerOptions": {
+    "forceConsistentCasingInFileNames": true,
+    "strict": true
+  },
   "files": [],
   "references": [
     {
@@ -8,7 +12,7 @@
       "path": "./tsconfig.node.json"
     },
     {
-      "path": "./tsconfig.vitest.json"
+      "path": "./tsconfig.test.json"
     }
-  ],
+  ]
 }
