--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@types/react": "^18.3.10",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react-swc": "^3.5.0",
+        "autoprefixer": "^10.4.20",
         "eslint": "^9.11.1",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-react": "^7.37.1",
@@ -42,8 +43,10 @@
         "eslint-plugin-storybook": "^0.10.1",
         "globals": "^15.9.0",
         "jsdom": "^25.0.1",
+        "postcss": "^8.4.49",
         "prettier": "^3.3.3",
         "storybook": "^8.3.6",
+        "tailwindcss": "^3.4.15",
         "typescript": "^5.5.3",
         "typescript-eslint": "^8.7.0",
         "vite": "^5.4.8",
