--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "build-storybook": "storybook build"
     },
     "dependencies": {
+        "prettier-plugin-tailwindcss": "^0.6.9",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
