feat(#2): add pulumi, aws, github integration - first pass

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,6 +26,7 @@
   "include": ["src/**/*"],
   "exclude": [
     /* Test / Mock files */
+    "infra/index.ts",
     ".storybook/**/*",
     "src/**/__tests__/*.{test,spec}.{ts,tsx}"
   ]
