--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    environment: AWS-STAGING
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
