--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,8 @@ name: Build & Deploy to S3 with Pulumi
 on:
   push:
     branches: ['main']
-
+permissions:
+  id-token: write
 jobs:
   deploy:
     runs-on: ubuntu-latest
