--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -35,6 +35,6 @@ jobs:
       - uses: pulumi/actions@v6
         with:
           command: preview
-          stack-name: static-web-aws-ts # When using an individual account, only use stack-name.
+          stack-name: jonpham/static-web-aws-ts/dev # When using an individual account, only use stack-name.
         env:
           PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
