--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,9 +6,9 @@ on:
 permissions:
   id-token: write
 jobs:
-  deploy:
+  test:
+    name: Test
     runs-on: ubuntu-latest
-    environment: AWS-STAGING
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -20,6 +20,20 @@ jobs:
         with:
           node-version-file: package.json
 
+      - name: Install app dependencies
+        run: pnpm install
+
+      - name: Lint Code
+        run: pnpm run lint
+
+      - name: Test Code
+        run: pnpm run test
+  deploy:
+    name: Deploy to Production
+    runs-on: ubuntu-latest
+    needs: test
+    environment: AWS-STAGING
+    steps:
       - name: Install Pulumi CLI
         uses: pulumi/actions@v6
 
