fix(github): No cross-job state

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,10 @@ jobs:
     needs: test
     environment: AWS-STAGING
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+
       - name: Install Pulumi CLI
         uses: pulumi/actions@v6
 
