--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -26,7 +26,7 @@
   "include": ["src/**/*"],
   "exclude": [
     /* Test / Mock files */
-    "infra/index.ts",
+    "infra/*.ts",
     ".storybook/**/*",
     "src/**/__tests__/*.{test,spec}.{ts,tsx}"
   ]
