--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -22,5 +22,5 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["vite.config.ts"],
-  "exclude": [".storybook/**/*", "infra/*.ts"]
+  "exclude": [".storybook/**/*"]
 }
