fix(gh) : fix deploy actions to rely on pulumi synced s3 folder

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,6 +38,12 @@ jobs:
         uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
 
+      # Build React App
+      - name: Install app dependencies
+        run: pnpm install
+      - name: Build React app
+        run: pnpm run build
+
       - name: Install Pulumi CLI
         uses: pulumi/actions@v6
 
@@ -64,21 +70,21 @@ jobs:
           cd infra
           pulumi up --yes --stack jonpham/static-web-aws-ts/prod
 
-      - name: Get Bucket Name
-        id: bucket
-        env:
-          PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-        run: |
-          cd infra
-          echo "BUCKET_NAME=$(pulumi stack output siteBucketName)" >> $GITHUB_OUTPUT
+      # - name: Get Bucket Name
+      #   id: bucket
+      #   env:
+      #     PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+      #   run: |
+      #     cd infra
+      #     echo "BUCKET_NAME=$(pulumi stack output siteBucketName)" >> $GITHUB_OUTPUT
 
-      - name: Install app dependencies
-        run: pnpm install
+      # - name: Install app dependencies
+      #   run: pnpm install
 
-      - name: Build React app
-        run: pnpm run build
+      # - name: Build React app
+      #   run: pnpm run build
 
-      - name: Upload dist/ to S3
-        run: |
-          aws sts get-caller-identity 
-          aws s3 sync dist/ s3://${{ steps.bucket.outputs.BUCKET_NAME }} --delete
+      # - name: Upload dist/ to S3
+      #   run: |
+      #     aws sts get-caller-identity
+      #     aws s3 sync dist/ s3://${{ steps.bucket.outputs.BUCKET_NAME }} --delete
